--- a/index.html
+++ b/index.html
@@ -129,9 +129,21 @@
                     <a href="https://www.facebook.com/theejosh.appleby" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                     <a href="https://www.facebook.com/theejosh.appleby" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
                     <a href="https://www.facebook.com/theejosh.appleby" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://github.com/japplebyco/josh1" title="Github" target="_blank"><i class="fa fa-github"></i></a>
                </div>
                <p>&copy; 2015 Josh Appleby. All rights reserved. | Site by: <a href="contact.html" class="JoshApplebyCo" title="JoshApplebyCo" target="_blank">JoshApplebyCo</a></p>
           </footer>
+          
+          <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-71565347-1', 'auto');
+  ga('send', 'pageview');
+
+     </script>
      </body>
       
 </html>
